--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "predeploy": "npm run build",
     "deploy": "-gh-pages -d dist"
   },
+  "homepage": "https://kjy868.github.io/todolist_practice/",
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
@@ -23,6 +24,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.2.2"
   }
