--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "-gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "homepage": "https://kjy868.github.io/todolist_practice/",
   "dependencies": {
